--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,14 @@ h1{
     width: 100%;
     object-fit: cover;
 }
-
+.search-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin: 10px;
+}
 
 
 
