--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,3 +33,11 @@ h1{
     margin: 0;
     font-family: 'Newsreader', serif;
 }
+#oneimagepage{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin: 30px;
+}
