--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@500&display=swap');
 
 h1{
     color: green;
@@ -49,4 +50,9 @@ h1{
 }
 #indexoneimage{
     display: none;
+}
+
+
+body {
+    background-color: #FCFF33;
 }
