--- a/personalgallery/templates/navbar.html
+++ b/personalgallery/templates/navbar.html
@@ -1,5 +1,5 @@
 <div>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #D2B48C; height: 80px;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-success" style="background-color: #D2B48C; height: 80px;">
         <a class="navbar-brand" href="{% url 'indexpage' %}" style="font-size: 20px;">MY GALLERY APP</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
