--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@500&display=swap');
+@import url(https://fonts.googleapis.com/css2?family=Crimson+Pro&display=swap);
 
 h1{
     color: green;
