--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,7 +44,7 @@ h1{
     margin: 30px;
 }
 #indexpageimage{
-    background-image: url("../images/background.jpg");
+    background-image: url("../images/sami-boudjelti-Wx3c74Xah-Y-unsplash.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
