--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@500&display=swap');
-@import url(https://fonts.googleapis.com/css2?family=Crimson+Pro&display=swap);
+/* @import url(https://fonts.googleapis.com/css2?family=Crimson+Pro&display=swap); */
 
 h1{
     color: green;
@@ -57,3 +57,14 @@ h1{
 body {
     background-color: #FCFF33;
 }
+img {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 4px;
+    width: 250px;
+  }
+  
+  img:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+  }
+  
